# Prosperity-2024

./: README.md  pyproject.toml
Tutorial/: datamodel.py  trading example data.py
git_hooks/: pre-push  setup_hooks.sh
round_1/: Manual_trading_tutorial_full_sim.py  prosperity (4).ipynb  starfruit_round1_ema_logreturns.ipynb  trader_round1_final.py  trader_round1_final_microprice.py
round_2/: message (8).py  regression_model.ipynb  trader.py  trader_2.py  trader_strat.py  xgb_model.py
round_2/data/: log_data.csv
round_3/: message (12).py  message_(9).py  multiple_regression_model.ipynb  regression_model.ipynb  regression_model_enhanced.ipynb  round_3_final_submission.py  trader_round3.py
round_4/: black_scholes_merton_model.ipynb  round4.ipynb  round_4_coconut_ratio.ipynb  round_4_coconut_ratio_mean_rev.ipynb  trader_round_4.py  trader_round_4_@.py
round_4/round-4-island-data-bottle/: round_4_trader_data.csv
round_5/: Counterparty.ipynb  message_(15).py  message_15).py  mtsi.py  round_5_final.py
